--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
     checkPassword.addEventListener("click", () => {
       const pass = passwordInput.value.trim();
-      if (pass === "150507") {
+      if (pass === "15052007") {
         passwordScreen.style.display = "none";
         letterSection.style.display = "flex";
         bgm.play();
@@ -305,3 +305,4 @@
   </script>
 </body>
 </html>
+
